--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -6,10 +6,13 @@
     "dev": "tsx watch src/index.ts",
     "build": "tsc -p tsconfig.json",
     "start": "node dist/index.js",
-    "typecheck": "tsc -p tsconfig.json --noEmit"
+    "typecheck": "tsc -p tsconfig.json --noEmit",
+    "seed": "tsx scripts/seed.ts"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.55.0",
     "cors": "^2.8.5",
+    "dotenv": "^17.2.1",
     "express": "^4.19.2"
   },
   "devDependencies": {
